# docs/swagger.json
@@ -8,33 +8,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/payments": {
-            "get": {
-                "description": "Get a list of model.Payment",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Payment"
-                ],
-                "summary": "Get all Payments",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Payment"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/payments/{order-id}": {
+        "/paymentbyorderid/{id}": {
             "get": {
                 "description": "Get a payment",
                 "consumes": [
@@ -61,6 +35,32 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Payment"
+                        }
+                    }
+                }
+            }
+        },
+        "/payments": {
+            "get": {
+                "description": "Get a list of model.Payment",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Payment"
+                ],
+                "summary": "Get all Payments",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Payment"
+                            }
                         }
                     }
                 }
